--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.5);
 }
 .card{
-    width: 40%;
+    width: 25vw;
     margin: 0 20px 20px 0;
     border:2px solid green
 }
