--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: ##0c3006;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
